# Data-Pipeline

./: Initializer.sh  LICENSE  README.md  Runner.sh  Stopper.sh  docker-compose.yml  pyproject.toml
Containers/: CheckKafka.py  ContainerDown.sh  ContainerUp.sh
Cronjob/: AddJob.sh  DeleteJob.sh
Data/: Backup.sh  Db.sql  GetData.py
Logger/: Log.py  Log.sh
Nocodb/: CreateBase.py  CreateTable.py  Ncdb.py
Topics/: T1_TS.py  T2_LA.py  T3_DB.py  TopicsRunner.sh  TopicsStopper.sh
